# vortex

./: .clang-format  .dir-locals.el  .gitignore  Makefile  README.md  main.py  meson.build  pyproject.toml  sample_config.cfg  setup.py  test_klipper.cfg  virtualenv.txt  vortex.py  vortex_emulator.py  vortex_run.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: build-arm.yml  build-x64.yml  release.yml
configs/: klipper_cartesian_quad_z.cfg  klipper_simple_cartesian.cfg  klipper_simple_corexy.cfg  klipper_simple_delta.cfg  sample_cartesian_config.cfg  sample_delta_config.cfg  sample_emulator_config.cfg
controllers/: __init__.py  meson.build  stm32f4.py  timers.py  types.py
controllers/boards/: btt_octopus.py  meson.build
controllers/chips/: meson.build  stm32.py
controllers/objects/: display.py  dpin.py  encoder.py  fan.py  meson.build  object_defs.py  pwm_pin.py  toolhead.py  vobj_base.py
controllers/objects/virtual/: base.py  display.py  dpin.py  encoder.py  meson.build  neopixel.py
data/: klipper.dict  klippy.protocol  mcu_exchange
docs/: Architecture.md  CodingStandard.md  Configuration.md  Development.md  Installation.md  ObjectReference.md  QuickStart.md  README.md  UserGuide.md
docs/Klipper/: CommandReference.md  Klipper.md  KlipperProtocol.md
emulator/: __init__.py  config.py  meson.build  monitor.py
emulator/kinematics/: __init__.py  meson.build
emulator/remote/: api.py  meson.build  server.py
frontends/: __init__.py  direct.py  klipper.py  lib.py  meson.build  proto.py  queues.py
frontends/direct/: __init__.py  meson.build
frontends/gcode/: __init__.py  gcmd.py  meson.build
frontends/klipper/: __init__.py  analog_pin.py  digital_pin.py  helpers.py  klipper_proto.py  meson.build  parser.py
lib/: constants.py  ctypes_helpers.py  events.py  ext_enum.py  logging.py  meson.build  utils.py
modules/: axis.py
src/: meson.build
src/controllers/: common_defs.h  core.c  core.h  debug.h  events.h  mem_debug.h  thread_control.c  thread_control.h  timing.c  timing.h  utils.c  utils.h
src/controllers/objects/: axis.c  axis.h  cache.c  cmd_opts.c  cmd_opts.h  cmd_opts_module.h  common_defs.h  endstop.c  endstop.h  heater.c  heater.h  object_defs.h  probe.c  probe.h  stepper.c  stepper.h  thermistor.c  thermistor.h
src/core/: __init__.py  auto-events.h.in  common_defs.h  core.c  core.h  debug.h  events.h  mem_debug.c  mem_debug.h  meson.build  thread_control.c  thread_control.h  threads.c  threads.h  timers.c  timers.h
src/core/kinematics/: __init__.py  _vortex_kinematics.py  cartesian.c  cartesian.h  corexy.c  corexy.h  delta.c  delta.h  kinematics.c  kinematics.h  meson.build
src/core/objects/: auto-events.h.in  auto-klass.h.in  auto-types.h.in  axis.c  axis.h  endstop.c  endstop.h  global.h  heater.c  heater.h  heater_compute.c  heater_compute.h  meson.build  object_defs.h  probe.c  probe.h  pwm.c  pwm.h  stepper.c  stepper.h  thermistor.c  thermistor.h  toolhead.c  toolhead.h
src/include/: cache.h  debug.h  meson.build  random.h
src/kmod/: Makefile  meson.build  vortex.c  vortex.h
src/lib/: cache.c  cache.h  meson.build  random.c  random.h  utils.c  utils.h
src/lib/atomics/: __init__.py  _vortex_atomics.py  atomics.c  atomics.h  meson.build
src/lib/logging/: __init__.py  _vortex_logging.py  logging.c  logging.h  meson.build
src/threads/: core_threads.c  core_threads.h  meson.build  threads.c  threads.h
test/: framework.py  testutils.py  vortex_tests.py
test/tests/: axis_direct.py  digital_pin_direct.py  endstop_direct.py  fan_direct.py  heater_direct.py  probe_direct.py  pwm_direct.py  stepper_direct.py  toolhead_direct.py
test/tests/direct/: axis.py  digital_pin.py  endstop.py  heater.py  probe.py  pwm.py  stepper.py  toolhead.py
tools/: auto_gen.py  auto_gen_debug.py  auto_gen_logging.py  auto_gen_types.py  config_from_klipper.py  decode_klipper_proto.py  draw_toolhead.py  emulator_track.py  find_klipper_commands.py  find_modules.py  generate_klipper_proto.py  generate_vobj_defs.py  graph.py  heater_sim.py  klipper_print_file.py  kmod_test.c  mem_decode.py  meson.build  monitor.py  parse_uart.py  ramp_test.py  show_klipper_dict.py  temp_ramp.c  test_msgproto.py  timing_test.c
